--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
   "type": "project",
   "require": {
     "silex/silex": "2.0",
-    "twig/twig": "2.0"
+    "twig/twig": "2.0",
+    "symfony/asset": "^3.3",
+    "symfony/twig-bridge": "^3.3",
+    "vlucas/phpdotenv": "^2.4",
+    "doctrine/dbal": "~2.2",
+    "symfony/var-dumper": "^3.3"
   },
   "autoload": {
     "psr-4": {
