--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
     "symfony/twig-bridge": "^3.3",
     "vlucas/phpdotenv": "^2.4",
     "doctrine/dbal": "~2.2",
-    "symfony/var-dumper": "^3.3"
+    "symfony/var-dumper": "^3.3",
+    "symfony/form": "^3.3",
+    "symfony/validator": "^3.3",
+    "symfony/translation": "^3.3",
+    "symfony/config": "^3.3"
   },
   "autoload": {
     "psr-4": {
